FIX: add no-wrap to news date

--- a/src/dashboard/home/latest-updates/index.css
+++ b/src/dashboard/home/latest-updates/index.css
@@ -117,6 +117,8 @@
     }
 
     .datatable-news__date {
+        white-space: nowrap;
+
         &.datatable-news__date--new {
             font-weight: var(--font-weight-new);
         }
